# wolapp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.zed/: settings.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Box.tsx  Button.tsx  ExtHyperlink.tsx  Hyperlink.tsx  Layout.tsx  Modal.tsx  Nav.tsx
frontend/src/pages/: Add.tsx  Arp.tsx  Home.tsx
migrations/: 0000_init.sql
src/: mac.rs  main.rs
src/arp/: linux.rs  mod.rs  windows.rs
